--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@ layout: default
 
 <div class="home">
 
+  <h1>Adaptive Dynamics research</h1>
+
+  <ul>
+    <li>All the interesting stuff is in <a href="{{site.baseurl}}/MacLev">the MacArthur-Levins project</a> currently.</li>
+  </ul>
+
   <h1>Posts</h1>
 
   <ul class="posts">
