possible baseurl issue

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <link rel="canonical" href="//" />
 
         <!-- Custom CSS -->
-	<link rel="stylesheet" href="/css/main.css">
-	<link rel="stylesheet" href="/css/auto-generated-from-ww.css">
-	<link rel="stylesheet" href="/css/wmd.css">
+	<link rel="stylesheet" href="/adaptive-dynamics-research/css/main.css">
+	<link rel="stylesheet" href="/adaptive-dynamics-research/css/auto-generated-from-ww.css">
+	<link rel="stylesheet" href="/adaptive-dynamics-research/css/wmd.css">
 	<!--
         <script type="text/x-mathjax-config">MathJax.Hub.Config({ jax: ["input/MathML", "output/HTML-CSS"] });</script>
         <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=MML_HTMLorMML"></script>
@@ -58,7 +58,7 @@
   <h1>Adaptive Dynamics research</h1>
 
   <ul>
-    <li>All the interesting stuff is in <a href="/MacLev">the MacArthur-Levins project</a> currently.</li>
+    <li>All the interesting stuff is in <a href="/adaptive-dynamics-research/MacLev">the MacArthur-Levins project</a> currently.</li>
   </ul>
 
   <h1>Posts</h1>
