--- a/Selection_Gradients/index.html
+++ b/Selection_Gradients/index.html
@@ -65,10 +65,10 @@
 <p>I’m using Sage to evaluate and analyze these models.</p>
 
 <ul>
-  <li><a href="/Selection_Gradients/MacLev.html">Adaptive Geometry of Resource Competition</a>: introducing the MacArthur-Levins resource competition model, and Sage code for it
+  <li><a href="MacLev.html">Adaptive Geometry of Resource Competition</a>: introducing the MacArthur-Levins resource competition model, and Sage code for it
     <ul>
-      <li><a href="/Selection_Gradients/MacLev-1-1.html">Adaptive Geometry of Resource Competition: One Species, One Resource</a>: analysis of the simple case</li>
-      <li><a href="/Selection_Gradients/MacLev-2-2.html">Adaptive Geometry of Resource Competition: Two Species, Two Resources</a>: not so simple</li>
+      <li><a href="MacLev-1-1.html">Adaptive Geometry of Resource Competition: One Species, One Resource</a>: analysis of the simple case</li>
+      <li><a href="MacLev-2-2.html">Adaptive Geometry of Resource Competition: Two Species, Two Resources</a>: not so simple</li>
       <li><a href="notes.html">Notes</a></li>
     </ul>
   </li>
