--- a/Selection_Gradients/MacLev.html
+++ b/Selection_Gradients/MacLev.html
@@ -67,8 +67,8 @@
 <p>Child pages use this theory and code to investigate specific cases of the models: </p>
 
 <ul>
-  <li><a href="/Selection_Gradients/MacLev-1-1.html">Adaptive Geometry of Resource Competition: One Species, One Resource</a></li>
-  <li><a href="/Selection_Gradients/MacLev-2-2.html">Adaptive Geometry of Resource Competition: Two Species, Two Resources</a></li>
+  <li><a href="MacLev-1-1.html">Adaptive Geometry of Resource Competition: One Species, One Resource</a></li>
+  <li><a href="MacLev-2-2.html">Adaptive Geometry of Resource Competition: Two Species, Two Resources</a></li>
 </ul>
 
 <h2 id="macarthur-levins-population-dynamics">MacArthur-Levins population dynamics</h2>
