--- a/Selection_Gradients/ZNGI.html
+++ b/Selection_Gradients/ZNGI.html
@@ -63,7 +63,7 @@
   <p>Tilman-style resource uptake isoclines for two species and two resources.</p>
 
 <ul>
-  <li>See also <a href="/Selection_Gradients/MacLev-2-2.html">Adaptive Geometry and Resource Competition - Two Species, Two Resources</a>.</li>
+  <li>See also <a href="MacLev-2-2.html">Adaptive Geometry and Resource Competition - Two Species, Two Resources</a>.</li>
 </ul>
 
 <p><!-- maclev-2-2-zngi.sage.step --><fieldset class="ww-project-file-source ww-collapsible"><legend><span>maclev-2-2-zngi.sage.step</span></legend><div class="ww-collapsible-content"><pre># requires: maclev_2_2_defs.py maclev-2-2-adap.sobj
