--- a/projects/index.html
+++ b/projects/index.html
@@ -13,10 +13,8 @@
 	<link rel="stylesheet" href="/adaptive-dynamics-research/css/main.css">
 	<link rel="stylesheet" href="/adaptive-dynamics-research/css/auto-generated-from-ww.css">
 	<link rel="stylesheet" href="/adaptive-dynamics-research/css/wmd.css">
-	<!--
         <script type="text/x-mathjax-config">MathJax.Hub.Config({ jax: ["input/MathML", "output/HTML-CSS"] });</script>
         <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=MML_HTMLorMML"></script>
-	-->
 
     </head>
 
@@ -27,7 +25,7 @@
 
   <div class="wrap">
 
-    <a class="site-title" href="/">Lee Worden research prototype website</a>
+    <a class="site-title" href="/adaptive-dynamics-research/">Lee Worden research prototype website</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -42,14 +40,15 @@
         </svg>
       </a>
       <div class="trigger">
-        <a class="page-link" href="/about">About</a>
-        <a class="page-link" href="/projects">Projects</a>
+        <a class="page-link" href="/adaptive-dynamics-research/about">About</a>
+	<a class="page-link" href="/adaptive-dynamics-research/projects">Projects</a>
       </div>
     </nav>
 
   </div>
 
 </header>
+
 
     <div class="page-content">
       <div class="wrap">
