Symbiosis model and other updates

--- a/Selection_Gradients/Direct.html
+++ b/Selection_Gradients/Direct.html
@@ -329,9 +329,7 @@ ltx.close()
 </fieldset>
 <!-- direct-evol-plot.sage.out.latexml.html --></p>
 
-<p><fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Selection_Gradients › direct-a-vs-t.svg</p>
-</fieldset>
-<!-- direct-a-vs-t.svg --></p>
+<p><!-- direct-a-vs-t.svg --><object data="/adaptive-dynamics-research/wmd_files/Selection_Gradients/direct-a-vs-t.svg" type="image/svg+xml"><img src="/adaptive-dynamics-research/wmd_files/Selection_Gradients/direct-a-vs-t.png" alt="direct-a-vs-t.svg"/></object></p>
 
 <p><fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Selection_Gradients › direct-a-vs-a.svg</p>
 </fieldset>
