--- a/Selection_Gradients/LargeNumbers.html
+++ b/Selection_Gradients/LargeNumbers.html
@@ -76,15 +76,9 @@ while
 <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?1c695daa7d6e454c65d728e5186d2eb4.tex-inline › 1c695daa7d6e454c65d728e5186d2eb4.tex-inline.latexml.html</p>
 </fieldset>
 <!-- 1c695daa7d6e454c65d728e5186d2eb4.tex-inline.latexml.html -->
-In particular, the contributions of <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?5d9c329eb884fe06ced7ee7dfc9a8b33.tex-math › 5d9c329eb884fe06ced7ee7dfc9a8b33.tex-math.latexml.html</p>
-</fieldset>
-<!-- 5d9c329eb884fe06ced7ee7dfc9a8b33.tex-math.latexml.html --> to each of these values
-appear to be independent, since the <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?1d61ee0df5b4f14b76dad026d0ce7237.tex-math › 1d61ee0df5b4f14b76dad026d0ce7237.tex-math.latexml.html</p>
-</fieldset>
-<!-- 1d61ee0df5b4f14b76dad026d0ce7237.tex-math.latexml.html --> element of <!-- 69691c7bdcc3ce6d5d8a1361f22d04ac.tex-math.latexml.html --><span class="latexml"><math xmlns="http://www.w3.org/1998/Math/MathML" alttext="M" display="inline"><mi>M</mi></math></span> is independent
-of the <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?b3f556daf943d4a86d013d77df6d3320.tex-math › b3f556daf943d4a86d013d77df6d3320.tex-math.latexml.html</p>
-</fieldset>
-<!-- b3f556daf943d4a86d013d77df6d3320.tex-math.latexml.html --> element.  I guess I can’t rule out that the <!-- 7b774effe4a349c6dd82ad4f4f21d34c.tex-math.latexml.html --><span class="latexml"><math xmlns="http://www.w3.org/1998/Math/MathML" alttext="u" display="inline"><mi>u</mi></math></span> vectors
+In particular, the contributions of <!-- 5d9c329eb884fe06ced7ee7dfc9a8b33.tex-math.latexml.html --><span class="latexml"><math xmlns="http://www.w3.org/1998/Math/MathML" alttext="\Delta u_{i}" display="inline"><mrow><mi mathvariant="normal">Δ</mi><mo>⁢</mo><msub><mi>u</mi><mi>i</mi></msub></mrow></math></span> to each of these values
+appear to be independent, since the <!-- 1d61ee0df5b4f14b76dad026d0ce7237.tex-math.latexml.html --><span class="latexml"><math xmlns="http://www.w3.org/1998/Math/MathML" alttext="(m,n)" display="inline"><mrow><mo stretchy="false">(</mo><mi>m</mi><mo>,</mo><mi>n</mi><mo stretchy="false">)</mo></mrow></math></span> element of <!-- 69691c7bdcc3ce6d5d8a1361f22d04ac.tex-math.latexml.html --><span class="latexml"><math xmlns="http://www.w3.org/1998/Math/MathML" alttext="M" display="inline"><mi>M</mi></math></span> is independent
+of the <!-- b3f556daf943d4a86d013d77df6d3320.tex-math.latexml.html --><span class="latexml"><math xmlns="http://www.w3.org/1998/Math/MathML" alttext="(n,m)" display="inline"><mrow><mo stretchy="false">(</mo><mi>n</mi><mo>,</mo><mi>m</mi><mo stretchy="false">)</mo></mrow></math></span> element.  I guess I can’t rule out that the <!-- 7b774effe4a349c6dd82ad4f4f21d34c.tex-math.latexml.html --><span class="latexml"><math xmlns="http://www.w3.org/1998/Math/MathML" alttext="u" display="inline"><mi>u</mi></math></span> vectors
 might converge to a space where these things become correlated, but I’ll
 believe it when I see it.</p>
 
