work on symbiosis model; ww_load_session()

--- a/Selection_Gradients/Symbiosis.html
+++ b/Selection_Gradients/Symbiosis.html
@@ -368,8 +368,130 @@ not in transfer.</p>
 </fieldset>
 <!-- sea-ass-a.sage.out.latexml.html --></p>
 
+<p>So, all the selection is in the <!-- 0cc175b9c0f1b6a831c399e269772661.tex-math.latexml.html --><span class="latexml"><math xmlns="http://www.w3.org/1998/Math/MathML" alttext="a" display="inline"><mi>a</mi></math></span> terms between the host and guest.
+The guest’s incentive is the probability of associating (with benefit 1)
+minus the cost of making it happen.
+The host’s is the same (also with constant benefit 1 of associating).</p>
+
+<p>The indirect effect is the effect of each one’s change in <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?83878c91171338902e0fe0fb97a8c47a.tex-math › 83878c91171338902e0fe0fb97a8c47a.tex-math.latexml.html</p>
+</fieldset>
+<!-- 83878c91171338902e0fe0fb97a8c47a.tex-math.latexml.html --> on the 
+other, since both experience <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?83878c91171338902e0fe0fb97a8c47a.tex-math › 83878c91171338902e0fe0fb97a8c47a.tex-math.latexml.html</p>
+</fieldset>
+<!-- 83878c91171338902e0fe0fb97a8c47a.tex-math.latexml.html --> in common.
+Since <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?83878c91171338902e0fe0fb97a8c47a.tex-math › 83878c91171338902e0fe0fb97a8c47a.tex-math.latexml.html</p>
+</fieldset>
+<!-- 83878c91171338902e0fe0fb97a8c47a.tex-math.latexml.html --> is symmetric, the effect on the other is equal to that
+part of the direct effect on the self.
+This could be good or bad, depending on the parts <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?83878c91171338902e0fe0fb97a8c47a.tex-math › 83878c91171338902e0fe0fb97a8c47a.tex-math.latexml.html</p>
+</fieldset>
+<!-- 83878c91171338902e0fe0fb97a8c47a.tex-math.latexml.html --> and <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?6606cf30310348dd4dd06a34c8df00b2.tex-math › 6606cf30310348dd4dd06a34c8df00b2.tex-math.latexml.html</p>
+</fieldset>
+<!-- 6606cf30310348dd4dd06a34c8df00b2.tex-math.latexml.html --> are
+playing in the incentive.
+In this case, with <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?83878c91171338902e0fe0fb97a8c47a.tex-math › 83878c91171338902e0fe0fb97a8c47a.tex-math.latexml.html</p>
+</fieldset>
+<!-- 83878c91171338902e0fe0fb97a8c47a.tex-math.latexml.html --> and <!-- 4a8a08f09d37b73795649038408b5f33.tex-math.latexml.html --><span class="latexml"><math xmlns="http://www.w3.org/1998/Math/MathML" alttext="c" display="inline"><mi>c</mi></math></span> increasing as we leave zero,
+the indirect impact is to increase each party’s <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?83878c91171338902e0fe0fb97a8c47a.tex-math › 83878c91171338902e0fe0fb97a8c47a.tex-math.latexml.html</p>
+</fieldset>
+<!-- 83878c91171338902e0fe0fb97a8c47a.tex-math.latexml.html --> a bit more, which is a
+positive exernality.
+It would be a negative externality if the incentive were to decrease
+both <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?83878c91171338902e0fe0fb97a8c47a.tex-math › 83878c91171338902e0fe0fb97a8c47a.tex-math.latexml.html</p>
+</fieldset>
+<!-- 83878c91171338902e0fe0fb97a8c47a.tex-math.latexml.html --> and <!-- 4a8a08f09d37b73795649038408b5f33.tex-math.latexml.html --><span class="latexml"><math xmlns="http://www.w3.org/1998/Math/MathML" alttext="c" display="inline"><mi>c</mi></math></span>.</p>
+
 <p><!-- sea-ass-a.svg --><object data="/adaptive-dynamics-research/wmd_files/Selection_Gradients/sea-ass-a.svg" type="image/svg+xml"><img src="/adaptive-dynamics-research/wmd_files/Selection_Gradients/sea-ass-a.png" alt="sea-ass-a.svg"/></object></p>
 
+<p>Here I am using <!-- 4a8a08f09d37b73795649038408b5f33.tex-math.latexml.html --><span class="latexml"><math xmlns="http://www.w3.org/1998/Math/MathML" alttext="c" display="inline"><mi>c</mi></math></span> to mean both <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?6606cf30310348dd4dd06a34c8df00b2.tex-math › 6606cf30310348dd4dd06a34c8df00b2.tex-math.latexml.html</p>
+</fieldset>
+<!-- 6606cf30310348dd4dd06a34c8df00b2.tex-math.latexml.html --> and <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?93dd5f8f92632181f8418b803b94d4a3.tex-math › 93dd5f8f92632181f8418b803b94d4a3.tex-math.latexml.html</p>
+</fieldset>
+<!-- 93dd5f8f92632181f8418b803b94d4a3.tex-math.latexml.html -->, casually.
+What are the conditions for incentive to increase <!-- 0cc175b9c0f1b6a831c399e269772661.tex-math.latexml.html --><span class="latexml"><math xmlns="http://www.w3.org/1998/Math/MathML" alttext="a" display="inline"><mi>a</mi></math></span>:
+it always increases:
+<fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?8bb3d1e3ecaebe8d2cd23682c54fa925.tex-inline › 8bb3d1e3ecaebe8d2cd23682c54fa925.tex-inline.latexml.html</p>
+</fieldset>
+<!-- 8bb3d1e3ecaebe8d2cd23682c54fa925.tex-inline.latexml.html -->
+For positive indirect effect:
+<fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?5d1f028a4d5a244b5a0e5b68e0e30a23.tex-inline › 5d1f028a4d5a244b5a0e5b68e0e30a23.tex-inline.latexml.html</p>
+</fieldset>
+<!-- 5d1f028a4d5a244b5a0e5b68e0e30a23.tex-inline.latexml.html -->
+This requires <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?12c7acffa10294560a339fa9f4796b80.tex-math › 12c7acffa10294560a339fa9f4796b80.tex-math.latexml.html</p>
+</fieldset>
+<!-- 12c7acffa10294560a339fa9f4796b80.tex-math.latexml.html -->, <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?0486da111bb6090cab236af8666d3a64.tex-math › 0486da111bb6090cab236af8666d3a64.tex-math.latexml.html</p>
+</fieldset>
+<!-- 0486da111bb6090cab236af8666d3a64.tex-math.latexml.html --> have opposite sign or <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?8aed79d1e122753749dbe474b46cee61.tex-math › 8aed79d1e122753749dbe474b46cee61.tex-math.latexml.html</p>
+</fieldset>
+<!-- 8aed79d1e122753749dbe474b46cee61.tex-math.latexml.html -->.
+For actual increase in <!-- 0cc175b9c0f1b6a831c399e269772661.tex-math.latexml.html --><span class="latexml"><math xmlns="http://www.w3.org/1998/Math/MathML" alttext="a" display="inline"><mi>a</mi></math></span>, it’s the direct effect plus the other
+party’s indirect impact, which are composed from different values.
+They need the sum to be positive.
+I guess we could consider the sum of <!-- 0cc175b9c0f1b6a831c399e269772661.tex-math.latexml.html --><span class="latexml"><math xmlns="http://www.w3.org/1998/Math/MathML" alttext="a" display="inline"><mi>a</mi></math></span> terms?
+For that we get
+<fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?b838635a6b09fbb69b2ef4e742b17193.tex-inline › b838635a6b09fbb69b2ef4e742b17193.tex-inline.latexml.html</p>
+</fieldset>
+<!-- b838635a6b09fbb69b2ef4e742b17193.tex-inline.latexml.html --></p>
+
+<p>When is <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?5b08daec5d22ce90cc0a62eb203b7b30.tex-math › 5b08daec5d22ce90cc0a62eb203b7b30.tex-math.latexml.html</p>
+</fieldset>
+<!-- 5b08daec5d22ce90cc0a62eb203b7b30.tex-math.latexml.html --> positive?
+I guess there are four cases:</p>
+
+<ul>
+  <li>both positive: then a’s increase if <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?24c9e50ba2f38cf38159c432a8c7b924.tex-math › 24c9e50ba2f38cf38159c432a8c7b924.tex-math.latexml.html</p>
+</fieldset>
+<!-- 24c9e50ba2f38cf38159c432a8c7b924.tex-math.latexml.html --> positive or <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?7caa45cd9b5f8a982d6a987a4cce6ff9.tex-math › 7caa45cd9b5f8a982d6a987a4cce6ff9.tex-math.latexml.html</p>
+</fieldset>
+<!-- 7caa45cd9b5f8a982d6a987a4cce6ff9.tex-math.latexml.html --> negative, i.e. unless <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?8194e659b250577522aa53f872ff393b.tex-math › 8194e659b250577522aa53f872ff393b.tex-math.latexml.html</p>
+</fieldset>
+<!-- 8194e659b250577522aa53f872ff393b.tex-math.latexml.html --></li>
+  <li>both negative: increase unless <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?e8896170c3c4ebc5bab7489baefdd2be.tex-math › e8896170c3c4ebc5bab7489baefdd2be.tex-math.latexml.html</p>
+</fieldset>
+<!-- e8896170c3c4ebc5bab7489baefdd2be.tex-math.latexml.html --></li>
+  <li><fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?e520bd1a25537eb810ae29b971f94605.tex-math › e520bd1a25537eb810ae29b971f94605.tex-math.latexml.html</p>
+</fieldset>
+<!-- e520bd1a25537eb810ae29b971f94605.tex-math.latexml.html -->: increase guaranteed</li>
+  <li><fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?ea8d4009b110385e1892e0d923b5a982.tex-math › ea8d4009b110385e1892e0d923b5a982.tex-math.latexml.html</p>
+</fieldset>
+<!-- ea8d4009b110385e1892e0d923b5a982.tex-math.latexml.html -->: increase guaranteed</li>
+</ul>
+
+<p>These conditions amount to either positive indirect effect, or
+a different condition where <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?abeefb243b24f707b6b577a04c7d2ddc.tex-math › abeefb243b24f707b6b577a04c7d2ddc.tex-math.latexml.html</p>
+</fieldset>
+<!-- abeefb243b24f707b6b577a04c7d2ddc.tex-math.latexml.html --> – in this latter case,
+the indirect effect is negative but too small to counter the direct effect.
+This is in a range where adaptation is driven by reducing the cost,
+rather than increasing association.</p>
+
+<p>Maybe I should look at changing association directly -
+that’s <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?83878c91171338902e0fe0fb97a8c47a.tex-math › 83878c91171338902e0fe0fb97a8c47a.tex-math.latexml.html</p>
+</fieldset>
+<!-- 83878c91171338902e0fe0fb97a8c47a.tex-math.latexml.html -->, isn’t it.
+The change in <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?83878c91171338902e0fe0fb97a8c47a.tex-math › 83878c91171338902e0fe0fb97a8c47a.tex-math.latexml.html</p>
+</fieldset>
+<!-- 83878c91171338902e0fe0fb97a8c47a.tex-math.latexml.html --> is 
+<fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?f7c74c8a81f58d7676d5d557d0a32cb2.tex-inline › f7c74c8a81f58d7676d5d557d0a32cb2.tex-inline.latexml.html</p>
+</fieldset>
+<!-- f7c74c8a81f58d7676d5d557d0a32cb2.tex-inline.latexml.html -->
+If we imagine both players being roughly the same,
+this is what we were calling <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?ef30f818cc68a6ce98e0bd1db887c655.tex-math › ef30f818cc68a6ce98e0bd1db887c655.tex-math.latexml.html</p>
+</fieldset>
+<!-- ef30f818cc68a6ce98e0bd1db887c655.tex-math.latexml.html -->,
+which is the indirect effect.
+Since we have assumed association is positive for both,
+the indirect effect is the change in association.</p>
+
+<p>Therefore, the conditions for increasing mutual benefit in the
+form of <fieldset class="ww-messages"><legend>&lt;ww-messages-legend: &gt;</legend><p class='error'>Error: Project file not found: Standalone?a367579b6b0bd17ba7c42c6f833743b6.tex-math › a367579b6b0bd17ba7c42c6f833743b6.tex-math.latexml.html</p>
+</fieldset>
+<!-- a367579b6b0bd17ba7c42c6f833743b6.tex-math.latexml.html --> are:</p>
+
+<ul>
+  <li>association increases</li>
+  <li>association decreases due to incentive to reduce cost, and cost reduction outweighs loss of association.</li>
+</ul>
 
   </article>
 
