--- a/Selection_Gradients/index.html
+++ b/Selection_Gradients/index.html
@@ -363,7 +363,7 @@ class LotkaVolterraAdaptiveDynamics( object ):
 	self._A_to_function_bindings = Bindings( dict( _A_to_function_dict ) )
 
 	A_late_bindings = self._lv_model._A_bindings + self._adaptivedynamics._bindings + self._adaptivedynamics._late_bindings
-	self._A_function_expansion_dict = dict( [
+	_A_function_expansion_dict = dict( [
 	    ( a_name_indexer[i][j],
 		A_late_bindings( a_name_indexer[i][j] )
 		    .function( *([ u_indexer[i] for u_indexer in u_indexers ] + [ u_indexer[j] for u_indexer in u_indexers ]) ) )
@@ -375,9 +375,9 @@ class LotkaVolterraAdaptiveDynamics( object ):
 		    .function( *([ u_indexer[i] for u_indexer in u_indexers ]) ) )
 		for i in self._lv_model._population_indices
 	] )
-	#print '_A_function_expansion_dict:', self._A_function_expansion_dict
+	#print '_A_function_expansion_dict:', _A_function_expansion_dict
 	self._A_function_expansion_bindings = Bindings( FunctionBindings(
-	    self._A_function_expansion_dict ) )
+	    _A_function_expansion_dict ) )
 	#print '_A_function_expansion_bindings:', self._A_function_expansion_bindings
 	# _phenotypes_to_fn_bindings: changes u_i to u_i(t)
 	# is used in all the below methods, so that du_i(t)/dt works
@@ -389,6 +389,15 @@ class LotkaVolterraAdaptiveDynamics( object ):
 	self._phenotypes_from_fn_bindings = Bindings(
 	    { v:k for k, v in self._phenotypes_to_fn_bindings.items() } )
 	#print '_phenotypes_from_fn_bindings:', self._phenotypes_from_fn_bindings
+    def bind_in_place( self, *bindings, **args ):
+	b = Bindings( *bindings, **args )
+	self._adaptivedynamics.bind_in_place( b )
+	self._lv_model.bind_in_place( b )
+	self._lv_adap.bind_in_place( b )
+	self._A_to_function_bindings.bind_in_place( b )
+	self._A_function_expansion_bindings.bind_in_place( b )
+	self._phenotypes_to_fn_bindings.bind_in_place( b )
+	self._phenotypes_from_fn_bindings.bind_in_place( b )
     def A( self, i ):
         '''The 'interaction phenotype' vector of Lotka-Volterra coefficients
         that are affected by selection on population i.  These are r_i and a_ij
@@ -613,13 +622,13 @@ def plot_single_aij_pair( i, j, p, lvad, filename=None, scale=1, bindings=Bindin
     ux = SR.symbol()
     for u_var in (ui[i] for ui in lvad._adaptivedynamics._phenotype_indexers):
 	if lvad._adaptivedynamics._flow[u_var] != 0:
-	    px = pp0 + Bindings( { u_var: ux } )
+	    px = Bindings( { u_var: ux } ) + pp0
 	    print px
 	    A_curve = (
 		px( resolve_A_bindings( lvad.A(i)[lvad.A_index(j)] ) ),
 		px( resolve_A_bindings( lvad.A(j)[lvad.A_index(i)] ) )
 	    )
-	    print A_curve
+	    print 'curve:', A_curve
 	    aap += parametric_plot( A_curve, (ux,pp0(u_var)-1,pp0(u_var)+1), color='green' )
     aap.axes_labels( [ '$a_{ij}$', '$a_{ji}$' ] )
     if filename is not None:
@@ -628,7 +637,7 @@ def plot_single_aij_pair( i, j, p, lvad, filename=None, scale=1, bindings=Bindin
     return aap
 </pre></div></fieldset></p>
 
-<p>Here are makefiles that are used by all the code on the various pages in this project.</p>
+<p>Here is a makefile that is used by all the code on the various pages in this project.</p>
 
 <p><!-- sage-inline.mk --><fieldset class="ww-project-file-source ww-collapsible"><legend><span>sage-inline.mk</span></legend><div class="ww-collapsible-content"><pre>%.sage.step : %.sage-inline <a href='/adaptive-dynamics-research/wmd_files/Selection_Gradients/sage-inline.mk'>sage-inline.mk</a>
 	echo '# produces: $*.sage.out.tex' > $@
@@ -643,6 +652,10 @@ $(info <a href='/adaptive-dynamics-research/wmd_files/Selection_Gradients/Includ
 <a href='/adaptive-dynamics-research/wmd_files/Selection_Gradients/include'>include</a> $(WW_SI_MK_FILES)
 </pre></div></fieldset></p>
 
+<p>Here is some general-purpose Sage utility code, that may ultimately end
+up somewhere more central.</p>
+
+<p></p>
 
   </article>
 
